--- a/.github/workflows/deployTerraform.yaml
+++ b/.github/workflows/deployTerraform.yaml
@@ -34,10 +34,10 @@ jobs:
 ###################################################
 ########## END PLAN ###############################
 ###################################################
-  dev-apply:
+  sample-apply:
     name: 'Apply Terraform Changes for MyApplication'
     runs-on: ['ubuntu-latest']
-    needs: ['dev-plan']
+    needs: ['sample-plan']
     steps:
       - name: Git clone the repository
         uses: actions/checkout@v4
